# chatLangGraph

./: .env  .env.example  .gitignore  .vercelignore  VERCEL_DEPLOYMENT.md  claude.md  generate_graph_svg.py  launch_finchat.py  myprompts.txt  notes.txt  prompt_builder.py  prompts.py  pyproject.toml  rendered_finchat_prompt.txt  requirements.txt  run_finchat_with_tools.py  run_react_with_tools.py  setup_finchat_default.py  summary.md  tasks.md  test_detailed_react.py  test_react_pattern.py  test_web_chat.py  vercel.json  web_chat.py
.github/workflows/: update-nextjs-env.yml
api/: index.py
chatbot_framework/: __init__.py
chatbot_framework/agents/: __init__.py  base_chatbot_agent.py  chatbot_agent.py  l1.py  l2.py
chatbot_framework/config/: __init__.py  settings.py
chatbot_framework/evaluation/: __init__.py  (+1 more)
config/: default_config.json  finchat_config.json  finchat_like_simple.json  finchat_simple_mode.json
docs/: CODEBASE_ORGANIZATION.md  ENHANCED_TOOL_USAGE.md  HOW_TO_RUN_FINCHAT_FROM_MAIN.md  LANGGRAPH_COMPLIANCE_SUMMARY.md  MAIN_VS_FINCHAT_COMPARISON.md  README.md  USAGE_PROMPT_BUILDER.md  claude.md  template_quick_reference.md
examples/: basic_usage.py  example_finchat_with_tools.py  experiment_example.py  simple_tools_example.py
experiments/: promptExperiments.py  template_usage_guide.py
nextjs-integration/: README.md
prompts/: finpromptv1.txt  mingchoi.txt
tests/: test_enhanced_prompts.py  test_finchat_main.py  test_integration.py  test_invoke_compliance.py  test_main_scripts.py  test_react_demo.py
tools/: __init__.py  financial_tools.py
(+124 files in other folders)
